Fixing the layout of TimeInput to look nicerper yarona request. Right now the am/pm does not aligned to the hour, and too close to the edge of the box

--- a/src/TimeInput/TimeInput.scss
+++ b/src/TimeInput/TimeInput.scss
@@ -35,8 +35,10 @@
 
 .ampm {
     margin-top: 1px;
-    font-size: 14px;
-    line-height: 14px;
+    margin-right: 3px;
+    margin-left: 3px;
+    font-size: 16px;
+    line-height: 16px;
     text-transform: uppercase;
     color: $D10;
     @include FontRoman();
